Add id to the buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       ></video>
       <div class="video__controls">
         <img
-          id="js-forward-button"
+          id="js-rewind-button"
           class="video__controls-button"
           src="./src/assets/icons/backward.svg"
           alt="backward-btn"
@@ -27,12 +27,14 @@
           alt="play-btn"
         />
         <img
-          id="js-rewind-button"
+          id="js-forward-button"
           class="video__controls-button"
           src="./src/assets/icons/forward.svg"
           alt="forward-btn"
         />
       </div>
     </div>
+
+    <script type="module" src="./src/js/index.js"></script>
   </body>
 </html>
