Add progress bar in the player

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         src="./src/assets/videos/demo.mp4"
       ></video>
       <div class="video__controls">
+        <div class="video__controls-progress">
+          <div id="js-progress-bar" class="video__controls-progress-bar"></div>
+        </div>
         <img
           id="js-rewind-button"
           class="video__controls-button"
