--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
       </div>
     </div>
 
-    <script type="module" src="./src/js/index.js"></script>
+    <script type="module" src="./dist/index.js"></script>
   </body>
 </html>
